--- a/docker/pangolin/config/traefik/dynamic_config.yml
+++ b/docker/pangolin/config/traefik/dynamic_config.yml
@@ -7,7 +7,7 @@ http:
   routers:
     # HTTP to HTTPS redirect router
     main-app-router-redirect:
-      rule: "Host(`pangolin.example.com`)" # REPLACE WITH YOUR DOMAIN
+      rule: "Host(`pangolin.thewhitelodge.org`)" # REPLACE WITH YOUR DOMAIN
       service: next-service
       entryPoints:
         - web
@@ -16,7 +16,7 @@ http:
 
     # Next.js router (handles everything except API and WebSocket paths)
     next-router:
-      rule: "Host(`pangolin.example.com`) && !PathPrefix(`/api/v1`)" # REPLACE WITH YOUR DOMAIN
+      rule: "Host(`pangolin.thewhitelodge.org`) && !PathPrefix(`/api/v1`)" # REPLACE WITH YOUR DOMAIN
       service: next-service
       entryPoints:
         - websecure
@@ -25,7 +25,7 @@ http:
 
     # API router (handles /api/v1 paths)
     api-router:
-      rule: "Host(`pangolin.example.com`) && PathPrefix(`/api/v1`)" # REPLACE WITH YOUR DOMAIN
+      rule: "Host(`pangolin.thewhitelodge.org`) && PathPrefix(`/api/v1`)" # REPLACE WITH YOUR DOMAIN
       service: api-service
       entryPoints:
         - websecure
@@ -34,7 +34,7 @@ http:
 
     # WebSocket router
     ws-router:
-      rule: "Host(`pangolin.example.com`)" # REPLACE WITH YOUR DOMAIN
+      rule: "Host(`pangolin.thewhitelodge.org`)" # REPLACE WITH YOUR DOMAIN
       service: api-service
       entryPoints:
         - websecure
